SOLR-18139: Migrate away from Collections.empty*() methods. (#4168)
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
(cherry picked from commit 601f7411d47fe9ae75a90c4b61b0468a3c843031)