@@ -20,6 +20,7 @@ package org.apache.solr.handler.designer;
 import static org.apache.solr.handler.admin.ConfigSetsHandler.DEFAULT_CONFIGSET_NAME;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import org.apache.solr.client.solrj.SolrResponse;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
@@ -84,7 +85,7 @@ public class TestSchemaDesignerSettingsDAO extends SolrCloudTestCase
             DESIGNER_KEY + ENABLE_NESTED_DOCS_PARAM,
             false,
             DESIGNER_KEY + LANGUAGES_PARAM,
-            Collections.emptyList());
+            List.of());
 
     assertDesignerSettings(expSettings, settings);
     settings.setDisabled(false);
@@ -109,7 +110,7 @@ public class TestSchemaDesignerSettingsDAO extends SolrCloudTestCase
             DESIGNER_KEY + ENABLE_NESTED_DOCS_PARAM,
             false,
             DESIGNER_KEY + LANGUAGES_PARAM,
-            Collections.emptyList());
+            List.of());
     assertDesignerSettings(expSettings, settings);
     assertFalse("should not be disabled", dao.isDesignerDisabled(configSet));
 
